--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
   fl_chart: ^0.50.1
   flutter:
     sdk: flutter
   getwidget: ^2.0.5
+  image_picker: ^0.8.5
+  salomon_bottom_bar: ^3.3.0
   table_calendar: ^3.0.5
 
 dev_dependencies:
@@ -53,6 +56,7 @@ flutter:
   assets:
     - assets/images/
     - assets/logos/
+    - assets/icons/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
