--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   fl_chart: ^0.50.1
   flutter:
     sdk: flutter
+  get: ^4.6.3
   getwidget: ^2.0.5
   image_picker: ^0.8.5
   salomon_bottom_bar: ^3.3.0
