Help message and forgot password done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   carousel_slider: ^4.1.1
+  chat_bubbles: ^1.2.0
   cloud_firestore: ^3.1.16
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.18
